[gd_scene load_steps=20 format=3 uid="uid://gameroom001"]

[ext_resource type="Script" path="res://scripts/game/game_room.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="SF_bg"]
bg_color = Color(0.039, 0.067, 0.157, 1)

[sub_resource type="StyleBoxFlat" id="SF_table"]
bg_color = Color(0.075, 0.298, 0.11, 1)
corner_radius_top_left = 80
corner_radius_top_right = 80
corner_radius_bottom_right = 80
corner_radius_bottom_left = 80
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.141, 0.451, 0.173, 1)
shadow_color = Color(0, 0, 0, 0.5)
shadow_size = 24
shadow_offset = Vector2(0, 8)

[sub_resource type="StyleBoxFlat" id="SF_table_cards"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="SF_player_slot"]
bg_color = Color(0.071, 0.149, 0.267, 0.85)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.2, 0.35, 0.5, 0.5)

[sub_resource type="StyleBoxFlat" id="SF_hand_area"]
bg_color = Color(0.039, 0.094, 0.18, 0.95)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0

[sub_resource type="StyleBoxFlat" id="SF_action_bar"]
bg_color = Color(0.055, 0.118, 0.22, 1)
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 6
shadow_offset = Vector2(0, -3)

[sub_resource type="StyleBoxFlat" id="SF_ready_btn"]
bg_color = Color(0.196, 0.537, 0.518, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24
shadow_color = Color(0.196, 0.537, 0.518, 0.4)
shadow_size = 8
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="SF_play_btn"]
bg_color = Color(0.831, 0.686, 0.216, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24
shadow_color = Color(0.831, 0.686, 0.216, 0.4)
shadow_size = 8
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="SF_pass_btn"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.773, 0.306, 0.306, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="SF_chat_panel"]
bg_color = Color(0.039, 0.078, 0.157, 0.92)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0

[sub_resource type="StyleBoxFlat" id="SF_chat_input"]
bg_color = Color(0.071, 0.149, 0.267, 1)
border_width_bottom = 2
border_color = Color(0.2, 0.35, 0.5, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 12
content_margin_right = 12

[sub_resource type="StyleBoxFlat" id="SF_turn_ring"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.831, 0.686, 0.216, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxEmpty" id="SBE_1"]

[node name="GameRoom" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BG" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("SF_bg")

[node name="Table" type="PanelContainer" parent="."]
layout_mode = 1
anchor_left = 0.08
anchor_top = 0.18
anchor_right = 0.92
anchor_bottom = 0.62
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("SF_table")

[node name="TableCenter" type="VBoxContainer" parent=".Table"]
layout_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
theme_override_constants/separation = 6

[node name="PhaseLabel" type="Label" parent=".Table/TableCenter"]
unique_name_in_owner = true
layout_mode = 2
modulate = Color(0.831, 0.686, 0.216, 0.85)
text = "LOBBY"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 13

[node name="TableCards" type="HBoxContainer" parent=".Table/TableCenter"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
theme_override_constants/separation = 4

[node name="TurnIndicator" type="Label" parent=".Table/TableCenter"]
unique_name_in_owner = true
layout_mode = 2
modulate = Color(0.306, 0.8, 0.769, 1)
text = "Waiting for players..."
horizontal_alignment = 1
autowrap_mode = 2
theme_override_font_sizes/font_size = 14

[node name="TimerRow" type="HBoxContainer" parent=".Table/TableCenter"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 6

[node name="TimerIcon" type="Label" parent=".Table/TableCenter/TimerRow"]
layout_mode = 2
modulate = Color(0.831, 0.686, 0.216, 1)
text = "‚è±"
theme_override_font_sizes/font_size = 14

[node name="TurnTimer" type="Label" parent=".Table/TableCenter/TimerRow"]
unique_name_in_owner = true
layout_mode = 2
modulate = Color(0.91, 0.88, 0.82, 1)
text = "30"
theme_override_font_sizes/font_size = 16

[node name="TopPlayer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchor_left = 0.25
anchor_top = 0.02
anchor_right = 0.75
anchor_bottom = 0.18
grow_horizontal = 2
grow_vertical = 2
alignment = 1
theme_override_constants/separation = 2

[node name="TopPlayerPanel" type="PanelContainer" parent=".TopPlayer"]
layout_mode = 2
theme_override_styles/panel = SubResource("SF_player_slot")

[node name="TopPlayerInner" type="MarginContainer" parent=".TopPlayer/TopPlayerPanel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 6

[node name="TopPlayerVBox" type="VBoxContainer" parent=".TopPlayer/TopPlayerPanel/TopPlayerInner"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TopPlayerName" type="Label" parent=".TopPlayer/TopPlayerPanel/TopPlayerInner/TopPlayerVBox"]
layout_mode = 2
modulate = Color(0.91, 0.88, 0.82, 1)
text = "---"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 14

[node name="TopPlayerCards" type="Label" parent=".TopPlayer/TopPlayerPanel/TopPlayerInner/TopPlayerVBox"]
layout_mode = 2
modulate = Color(0.55, 0.65, 0.75, 1)
text = "üÇ† 13"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 12

[node name="LeftPlayer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchor_left = 0.0
anchor_top = 0.3
anchor_right = 0.22
anchor_bottom = 0.58
grow_horizontal = 2
grow_vertical = 2
alignment = 1
theme_override_constants/separation = 2

[node name="LeftPlayerPanel" type="PanelContainer" parent=".LeftPlayer"]
layout_mode = 2
theme_override_styles/panel = SubResource("SF_player_slot")

[node name="LeftPlayerInner" type="MarginContainer" parent=".LeftPlayer/LeftPlayerPanel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="LeftPlayerVBox" type="VBoxContainer" parent=".LeftPlayer/LeftPlayerPanel/LeftPlayerInner"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="LeftPlayerName" type="Label" parent=".LeftPlayer/LeftPlayerPanel/LeftPlayerInner/LeftPlayerVBox"]
layout_mode = 2
modulate = Color(0.91, 0.88, 0.82, 1)
text = "---"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 13

[node name="LeftPlayerCards" type="Label" parent=".LeftPlayer/LeftPlayerPanel/LeftPlayerInner/LeftPlayerVBox"]
layout_mode = 2
modulate = Color(0.55, 0.65, 0.75, 1)
text = "üÇ† 13"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 11

[node name="RightPlayer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchor_left = 0.78
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.58
grow_horizontal = 2
grow_vertical = 2
alignment = 1
theme_override_constants/separation = 2

[node name="RightPlayerPanel" type="PanelContainer" parent=".RightPlayer"]
layout_mode = 2
theme_override_styles/panel = SubResource("SF_player_slot")

[node name="RightPlayerInner" type="MarginContainer" parent=".RightPlayer/RightPlayerPanel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="RightPlayerVBox" type="VBoxContainer" parent=".RightPlayer/RightPlayerPanel/RightPlayerInner"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="RightPlayerName" type="Label" parent=".RightPlayer/RightPlayerPanel/RightPlayerInner/RightPlayerVBox"]
layout_mode = 2
modulate = Color(0.91, 0.88, 0.82, 1)
text = "---"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 13

[node name="RightPlayerCards" type="Label" parent=".RightPlayer/RightPlayerPanel/RightPlayerInner/RightPlayerVBox"]
layout_mode = 2
modulate = Color(0.55, 0.65, 0.75, 1)
text = "üÇ† 13"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 11

[node name="BottomPlayer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchor_left = 0.25
anchor_top = 0.62
anchor_right = 0.75
anchor_bottom = 0.68
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="BottomPlayerName" type="Label" parent=".BottomPlayer"]
layout_mode = 2
modulate = Color(0.831, 0.686, 0.216, 1)
text = "You"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 14

[node name="HandArea" type="PanelContainer" parent="."]
layout_mode = 1
anchor_left = 0.0
anchor_top = 0.68
anchor_right = 1.0
anchor_bottom = 0.84
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("SF_hand_area")

[node name="HandScroll" type="ScrollContainer" parent=".HandArea"]
layout_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HandContainer" type="HBoxContainer" parent=".HandArea/HandScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
alignment = 1
theme_override_constants/separation = 6

[node name="ActionBar" type="PanelContainer" parent="."]
layout_mode = 1
anchor_left = 0.0
anchor_top = 0.84
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("SF_action_bar")

[node name="ActionMargin" type="MarginContainer" parent=".ActionBar"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 10

[node name="ActionRow" type="HBoxContainer" parent=".ActionBar/ActionMargin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ReadyButton" type="Button" parent=".ActionBar/ActionMargin/ActionRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 52)
theme_override_styles/normal = SubResource("SF_ready_btn")
theme_override_styles/hover = SubResource("SF_ready_btn")
theme_override_styles/pressed = SubResource("SF_ready_btn")
theme_override_styles/focus = SubResource("SBE_1")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "‚úì READY"

[node name="PlayButton" type="Button" parent=".ActionBar/ActionMargin/ActionRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 52)
theme_override_styles/normal = SubResource("SF_play_btn")
theme_override_styles/hover = SubResource("SF_play_btn")
theme_override_styles/pressed = SubResource("SF_play_btn")
theme_override_styles/focus = SubResource("SBE_1")
theme_override_colors/font_color = Color(0.08, 0.08, 0.08, 1)
theme_override_font_sizes/font_size = 16
text = "PLAY ‚ô†"
visible = false

[node name="PassButton" type="Button" parent=".ActionBar/ActionMargin/ActionRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
custom_minimum_size = Vector2(120, 52)
theme_override_styles/normal = SubResource("SF_pass_btn")
theme_override_styles/hover = SubResource("SF_pass_btn")
theme_override_styles/pressed = SubResource("SF_pass_btn")
theme_override_styles/focus = SubResource("SBE_1")
theme_override_colors/font_color = Color(0.878, 0.447, 0.447, 1)
theme_override_font_sizes/font_size = 16
text = "PASS"
visible = false

[node name="ChatPanel" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchor_left = 0.0
anchor_top = 0.84
anchor_right = 0.0
anchor_bottom = 1.0
offset_right = 0.0
grow_vertical = 2
visible = false
theme_override_constants/separation = 4

[node name="ChatLog" type="RichTextLabel" parent=".ChatPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.82, 0.85, 0.88, 1)
theme_override_font_sizes/normal_font_size = 13
scroll_following = true
bbcode_enabled = true

[node name="ChatInputRow" type="HBoxContainer" parent=".ChatPanel"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="ChatInput" type="LineEdit" parent=".ChatPanel/ChatInputRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 40)
theme_override_styles/normal = SubResource("SF_chat_input")
theme_override_colors/font_color = Color(0.91, 0.88, 0.82, 1)
theme_override_colors/font_placeholder_color = Color(0.4, 0.47, 0.56, 1)
theme_override_font_sizes/font_size = 14
placeholder_text = "Chat..."

[connection signal="pressed" from=".ActionBar/ActionMargin/ActionRow/ReadyButton" to="." method="_on_ready_pressed"]
[connection signal="pressed" from=".ActionBar/ActionMargin/ActionRow/PlayButton" to="." method="_on_play_pressed"]
[connection signal="pressed" from=".ActionBar/ActionMargin/ActionRow/PassButton" to="." method="_on_pass_pressed"]
[connection signal="text_submitted" from=".ChatPanel/ChatInputRow/ChatInput" to="." method="_on_chat_submitted"]
